--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".ViewProfile"></activity>
+        <activity android:name=".SearchActivity" />
         <activity android:name=".botNav" />
         <activity android:name=".UserProfile" />
         <activity android:name=".ChangePassword" />
