--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewProfile"></activity>
+        <activity android:name=".Form"></activity>
+        <activity android:name=".AdvertiesmentPage" />
+        <activity android:name=".Information" />
+        <activity android:name=".UpdateDelete" />
+        <activity android:name=".ViewProfile" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".botNav" />
         <activity android:name=".UserProfile" />
